[package]
name = "icedragon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std"] }
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
target-lexicon = { version = "0.12", default-features = false }
thiserror = { version = "1.0.64", default-features = false }
uuid = { version = "1.10", default-features = false, features = ["v4"] }
which = { version = "6.0", default-features = false }

[dev-dependencies]
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
goblin = { version = "0.9", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
liblzma = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.16", default-features = false }
test-case = { version = "3.3", default-features = false }

[[bin]]
name = "icedragon"
