[package]
name = "icedragon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
target-lexicon = { version = "0.12", default-features = false }
thiserror = { version = "1.0.64", default-features = false }
uuid = { version = "1.10", default-features = false, features = ["v4"] }
which = { version = "6.0", default-features = false }

[dev-dependencies]
assert_cmd = { version = "2.0", default-features = false }
git2 = { version = "0.20", default-features = false }
tempfile = { version = "3.16", default-features = false }

[[bin]]
name = "icedragon"
