[package]
name = "icedragon"
version = "0.0.1"
authors = ["Michal Rostecki <vadorovsky@protonmail.com>"]
description = "Linux cross-compilation suite for building portable software"
license = "Apache-2.0"
keywords = [
    "compilation",
    "cross",
    "linux",
    "llvm",
    "musl"
]
categories = [
    "development-tools",
    "command-line-utilities",
    "os::linux-apis",
]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std"] }
either = { version = "1.15.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
futures = { version = "0.3", default-features = false }
indicatif = { version = "0.17", default-features = false }
ipc-channel = { version = "0.19", default-features = false }
log = { version = "0.4", default-features = false }
nix = { version = "0.29.0", default-features = false, features = ["event", "fs", "mount", "sched", "user"] }
oci-client = { version = "0.14", default-features = false, features = ["rustls-tls"] }
rand = { version = "0.9", default-features = false, features = ["os_rng", "std_rng"] }
reqwest = { version = "0.12", default-features = false }
serde-error = { version = "0.1", default-features = false }
target-lexicon = { version = "0.12", default-features = false }
tar = { version = "0.4", default-features = false }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.44", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
uuid = { version = "1.10", default-features = false, features = ["v4"] }
which = { version = "6.0", default-features = false }

[dev-dependencies]
goblin = { version = "0.9", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
liblzma = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.16", default-features = false }
test-case = { version = "3.3", default-features = false }

[[bin]]
name = "icedragon"

[lints.clippy]
pedantic = "deny"
unused_trait_names = "deny"
